# AI-decision-maker

./: .gitignore  ARCHITECTURE.md  PROJECT_INTRO.md  README.md  config.example.py  config.py  debug_phone.py  pyproject.toml  run_categorical.py  run_clean.py  语义决策与机械执行.md
data/: .gitignore
data/categorical/input/: data_A.csv  data_B.csv  data_C.csv  data_D.csv
data/categorical/output/: data_A_type.json  data_B_type.json  data_C_type.json  data_D_type.json  report.json  report.xlsx
data/clean/: finance_clean.csv  medical_clean.csv  user_clean.csv
data/dirty/: finance.csv  medical.csv  user.csv
docs/: unified_framework_design.md  分类变量有序判断.md
examples/: demo.py
signalchain/: __init__.py  ai_client.py  cache.py  categorical.py  knowledge.py  models.py  pipeline.py  run_categorical_analysis.R  stage0_profile.py  stage1_scene.py  stage2_router.py  stage3_semantic.py  stage4_assemble.py  stage5_execute.py  tokenizer.py
signalchain/operations/: __init__.py  age.py  base.py  coordinates.py  currency.py  datetime.py  datetime_parser.py  department.py  drug_name.py  email.py  gender.py  icd10.py  log_level.py  pass_through.py  phone.py  registry.py
tests/: run_all.py  run_e2e_categorical.py  run_e2e_pipeline.py  run_token_benchmark.py  run_unit.py  test_all.py  test_cache.py  test_categorical.py  test_local.py  test_operations.py  test_pipeline.py  test_real_e2e.py  test_stage0.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_token_comparison.py
