[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalchain"
version = "0.1.0"
description = "AI信号链决策框架：AI只传递极简信号码，本地负责查表执行"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
